# python-project-lvl2

./: .gitignore  .~lock.README.md#  Makefile  README.md  import_try.py  makefile  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  linter.yml  pytest.yml  test.yml
gendiff/: __init__.py  cli.py  gendiff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: diff.py  gendiff.py  generate_diff.py  parse.py
tests/: gendiff_test.py  test_generate_diff.py  tests_diff.py
tests/fixtures/: diff_file1_file2.json  expected_file1_file2.json  expected_nested_files.json  file_nested2.yml  test.txt
