[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Generate difference between json and yaml files"
authors = ["tomilinBV <qwertere97@mail.ru>"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "3.9.4"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
