[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Generate difference between json and yaml files"
authors = ["tomilinBV <qwertere97@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9.4"
pytest = {version = "^6.2.3", python = "^3.9.4"}
pytest-cov = {version = "^2.11.1", python = "^3.9.4"}
PyYAML = {version = "^5.4.1", python = "^3.9.4"}

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.9.1", python = "^3.9.4"}

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"